jenkins-terraform/nsg.tf
# Create network security group with SSH and Jenkins ports open
resource "azurerm_network_security_group" "jenkins_nsg" {
  name                = "${var.vm_name}-nsg"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  security_rule {
    name                       = "SSH"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range      = "22"
    source_address_prefix       = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "Jenkins"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range      = ["80", "443", "8080", "8443"] # Multiple ports here
    source_address_prefix       = "*"
    destination_address_prefix = "*"
  }
}
